[package]
name = "keyrock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
once_cell = "1.19.0"
reqwest = { version = "0.12.3", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "=1.0.115"
tokio = "1.37.0"
url = "2.5.0"

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
